--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
   /* height: 100vh; */
   z-index: 0;
   background-repeat: no-repeat;
-  background-image: url(../img/puung2.jpg);
+  background-image: url(https://scontent-hkg4-1.xx.fbcdn.net/v/t1.6435-9/44024077_532186093894935_8944481767167885312_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=174925&_nc_ohc=PhldBdx6IxsAX_gqapR&_nc_ht=scontent-hkg4-1.xx&oh=75fa4c55b67cee21bc950711fb0fe45d&oe=619EEAF2);
   background-size: cover;
   background-position: 50%;
   -webkit-filter: blur(4px);
