--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
   /* height: 100vh; */
   z-index: 0;
   background-repeat: no-repeat;
-  background-image: url(https://scontent-hkg4-1.xx.fbcdn.net/v/t1.6435-9/44024077_532186093894935_8944481767167885312_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=174925&_nc_ohc=PhldBdx6IxsAX_gqapR&_nc_ht=scontent-hkg4-1.xx&oh=75fa4c55b67cee21bc950711fb0fe45d&oe=619EEAF2);
+  background-image: url(https://scontent.fhan2-1.fna.fbcdn.net/v/t31.18172-8/28238902_399349583845254_1904800238588891141_o.jpg?_nc_cat=102&ccb=1-5&_nc_sid=cdbe9c&_nc_ohc=qqKCnfABBTIAX9DC3NI&_nc_ht=scontent.fhan2-1.fna&oh=72e8920ba06bebf607fbe2db17279d3e&oe=61A10DA5);
   background-size: cover;
   background-position: 50%;
   -webkit-filter: blur(4px);
